# TagBot

./: .gitignore  .gitmodules  .travis.yml  AGENTS.md  API_CONSUMPTION_ANALYSIS.md  DEPLOYING.md  DESIGN.md  DEVGUIDE.md  Dockerfile  IMPROVEMENTS.md  Julia TagBot  LICENSE  Makefile  Manifest.toml  Project.toml  README.md  action.py  action.yml  build.sh  deprecation.go  errors.go  example.yml  go.mod  go.sum  issue_comment.go  issue_comment_test.go  list_installs.go  main.go  mypy.ini  package-lock.json  package.json  pull_request.go  pull_request_test.go  pyproject.toml  release.go  requirements.dev.txt  requirements.txt  samconfig.toml  serverless.yml  setup.cfg  (+4 more)
.ci/: check_readme.jl
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: CI.yml  CompatHelper.yml  check_readme.yml  dar.yml  label.yml  publish.yml  tagbot.yml  test.yml  web.yml
changelog/: Gemfile  changelog.rb  test.rb
docs/: DEPLOYING.md  DESIGN.md  JULIA_PORT_GUIDE.md  TODO-serverless-v4.md
github/: changelog.go  deprecation.go  errors.go  go.mod  go.sum  issue_comment.go  issue_comment_test.go  main.go  main_test.go  pull_request.go  pull_request_test.go  release.go  utils.go  utils_test.go
julia/: Dockerfile  Project.toml  README.md  action.yml
julia/src/: TagBot.jl  changelog.jl  git.jl  gitlab.jl  logging.jl  main.jl  precompile.jl  repo.jl  types.jl
julia/test/: runtests.jl  test_backfilling.jl  test_changelog.jl  test_git.jl  test_gitlab.jl  test_repo.jl  test_repo_mocked.jl  test_types.jl
layers/changelog/: build.sh
old/: pyproject.toml
old/.github/workflows/: test.yml
old/stubs/: gnupg.pyi  pexpect.pyi
old/tagbot/action/: changelog.py
old/tagbot/local/: __main__.py
src/: TagBot.jl
stubs/: boto3.pyi  docker.pyi  gnupg.py  gnupg.pyi  gql.pyi  pexpect.py  semver.py  semver.pyi
tagbot/: __init__.py  __main__.py  aws_lambda.py  changelog.py  context.py  enums.py  env.py  exceptions.py  git.py  github_api.py  notify.py  prepare.py  release.py  repo.py  resources.py  sns.py  stages.py  tag.py  util.py  webhook.py
tagbot/action/: __init__.py  __main__.py  changelog.py  git.py  gitlab.py  graphql.py  repo.py
tagbot/handlers/: __init__.py  changelog.py  failure.py  notify.py  prepare.py  release.py  tag.py  webhook.py
tagbot/local/: __main__.py
tagbot/mixins/: __init__.py  aws.py  git.py  github_api.py
tagbot/web/: __init__.py  lambda_handler.py  reports.py
tagbot/web/templates/: base.html  index.html
test/: __init__.py  runtests.jl  test_changelog.py  test_env.py  test_git.py  test_repo.py  test_resources.py  test_stages.py  test_tagbot.py
test/action/: test_action.py  test_auto_changelog.py  test_backfilling.py  test_changelog.py  test_changelog_formats.py  test_git.py  test_gitlab_wrapper.py  test_gitlab_wrapper_extended.py  test_graphql.py  test_repo.py  test_repo_gitlab.py
test/mixins/: test_aws.py  test_git.py  test_github_api.py
test/web/: conftest.py  test_lambda_handler.py  test_reports.py  test_web.py
web/: .gitignore  requirements.txt  serverless.yml
web/src/: __init__.py  reports.py
web/src/templates/: 404.html  405.html  500.html
web/stubs/: boto3.pyi  pylev.pyi
web/test/: conftest.py  test_reports.py  test_web.py
