[tool.poetry]
name = "tagbot"
version = "1.25.4"
description = "Creates tags, releases, and changelogs for your Julia packages when they're registered"
authors = ["Chris de Graaf <me@cdg.dev>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.12"
Flask = "3.1.3"
Jinja2 = "^3"
PyGithub = "^2.9.0"
click = "^8"
docker = "^7.1.0"
pexpect = "^4.8.0"
pylev = "^1.3.0"
python-gnupg = "^0.5.6"
pyyaml = "^6"
semver = "^3.0.4"
toml = "^0.10.0"
werkzeug = "3.1.7"
python-gitlab = { version = "^8.2.0", optional = true }

[tool.poetry.extras]
gitlab = ["python-gitlab"]

[tool.poetry.requires-plugins]
poetry-plugin-export = ">=1.8"

[tool.poetry.group.dev.dependencies]
black = "^26.3"
boto3 = "^1.42.83"
flake8 = "^7"
mypy = "^1.20"
pytest-cov = "^7.1.0"
types-requests = "^2.33.0"
types-toml = "^0.10.8"
types-PyYAML = "6.0.12.20250915"

[tool.black]
line-length = 88

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
