[tool.poetry]
name = "tagbot"
version = "1.25.6"
description = "Creates tags, releases, and changelogs for your Julia packages when they're registered"
authors = ["Chris de Graaf <me@cdg.dev>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.12"
Jinja2 = "^3"
PyGithub = "^2.9.0"
semver = "^3.0.4"
toml = "^0.10.0"
# Optional: only needed when using SSH key passwords
pexpect = { version = "^4.8.0", optional = true }
# Optional: only needed when using GPG signing
python-gnupg = { version = "^0.5.6", optional = true }
# Optional: only needed for error reporting to julia-tagbot.com
docker = { version = "^7.1.0", optional = true }
requests = { version = "^2.28.0", optional = true }
# Optional: only needed for the web service
Flask = { version = "3.1.3", optional = true }
werkzeug = { version = "3.1.7", optional = true }
pylev = { version = "^1.3.0", optional = true }
# Optional: only needed for the local CLI
click = { version = "^8", optional = true }
pyyaml = { version = "^6", optional = true }
# Optional: only needed for GitLab repos
python-gitlab = { version = "^8.2.0", optional = true }

[tool.poetry.extras]
gitlab = ["python-gitlab"]
ssh = ["pexpect"]
gpg = ["python-gnupg"]
reporting = ["docker", "requests"]
web = ["Flask", "werkzeug", "pylev"]
local = ["click", "pyyaml"]
# Install everything (matches previous behavior)
all = ["pexpect", "python-gnupg", "docker", "requests", "Flask", "werkzeug", "pylev", "click", "pyyaml", "python-gitlab"]

[tool.poetry.requires-plugins]
poetry-plugin-export = ">=1.8"

[tool.poetry.group.dev.dependencies]
black = "^26.3"
boto3 = "^1.42.83"
flake8 = "^7"
mypy = "^1.20"
pytest-cov = "^7.1.0"
types-requests = "^2.33.0"
types-toml = "^0.10.8"
types-PyYAML = "6.0.12.20250915"

[tool.black]
line-length = 88

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
